After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 753282 - segfault when duplicating a folder
segfault when duplicating a folder
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Crashers
3.17.x
Other Linux
: Normal normal
: 3.18
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-08-05 11:39 UTC by Clément Guérin
Modified: 2015-09-08 14:27 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
file-operations: fix crash when copying (2.89 KB, patch)
2015-09-08 14:26 UTC, Carlos Soriano
committed Details | Review

Description Clément Guérin 2015-08-05 11:39:26 UTC
Steps to reproduce:
- open Nautilus
- select any folder
- Ctrl+C / Ctrl+V to duplicate it
- Nautilus will segfault

Bisected to

commit 2db9a2950b90e82f6f2123280cbf209976bce977
Author: Carlos Soriano <csoriano@gnome.org>
Date:   Tue Jul 14 10:13:48 2015 +0200

    progress-info: allow finished infos to remain alive
    
    We want to not hide the operations and the operations button
    in the toolbar if the popover is open. For that, we need to
    allow operations widgets to remain alive even when the operation
    is finished.
    
    For that we need to add a new status state to copying/moving/trashing,
    like copied/moved/trashed.
    On the way, improve the wording of file-operations to match the mockups,
    and also make the report operations code more consistent to each other.
Comment 1 Georges Basile Stavracas Neto 2015-08-21 03:20:07 UTC
Can you provide a stack trace? I can't reproduce it here.
Comment 2 Clément Guérin 2015-08-22 08:49:30 UTC
Still happening for me with nautilus 5e528b36d2.

Backtrace:
  • #0 g_file_query_info
    from /usr/lib/libgio-2.0.so.0
  • #1 custom_basename_to_string
    at nautilus-file-operations.c line 803
  • #2 eel_strdup_vprintf_with_custom
    at eel-string.c line 552
  • #3 f
    at nautilus-file-operations.c line 912
  • #4 report_copy_progress
    at nautilus-file-operations.c line 3246
  • #5 copy_files
    at nautilus-file-operations.c line 4778
  • #6 copy_job
    at nautilus-file-operations.c line 4913
  • #7 ??
    from /usr/lib/libgio-2.0.so.0
  • #8 ??
    from /usr/lib/libgio-2.0.so.0
  • #9 ??
    from /usr/lib/libglib-2.0.so.0
  • #10 ??
    from /usr/lib/libglib-2.0.so.0
  • #11 start_thread
    from /usr/lib/libpthread.so.0
  • #12 clone
    from /usr/lib/libc.so.6

Comment 3 Pavel Grunt 2015-09-05 12:57:43 UTC
Also happens when copying two or more files to the same folder

Thread 7 (Thread 0x7fffe10cd700 (LWP 24775))

  • #0 g_file_query_info
    at gfile.c line 1195
  • #1 custom_basename_to_string
    at nautilus-file-operations.c line 803
  • #2 eel_strdup_vprintf_with_custom
    at eel-string.c line 552
  • #3 f
    at nautilus-file-operations.c line 912
  • #4 report_copy_progress
    at nautilus-file-operations.c line 3274
  • #5 copy_files
    at nautilus-file-operations.c line 4812
  • #6 copy_job
    at nautilus-file-operations.c line 4947
  • #7 io_job_thread
    at gioscheduler.c line 85
  • #8 g_task_thread_pool_thread
    at gtask.c line 1283
  • #9 g_thread_pool_thread_proxy
    at gthreadpool.c line 307
  • #10 g_thread_proxy
    at gthread.c line 778
  • #11 start_thread
    from /lib64/libpthread.so.0
  • #12 clone
    from /lib64/libc.so.6

Comment 4 Carlos Soriano 2015-09-08 14:26:54 UTC
Created attachment 310906 [details] [review]
file-operations: fix crash when copying

Commit 2db9a295 introduced an obvious crash, not sure how
I managed to make it in if it was part of the tests and seems
it was working for other people.
Anyway, we were using the wrong argument, which pointed
to a wrong address when reporting operations, and that was
causing a crash.

To fix it, remove the  spurious argument.
Comment 5 Carlos Soriano 2015-09-08 14:27:33 UTC
Attachment 310906 [details] pushed as 04c6c58 - file-operations: fix crash when copying